Primer commit del portafolio actualizado

--- a/Portafolio-main/src/index.html
+++ b/Portafolio-main/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
+    
 
     <!--- basic page needs
     ================================================== -->
@@ -98,7 +99,7 @@
 
                 <ul class="hero-social">
                     <li>
-                        <a href="https://wa.me/526142688407" target="_blank title="">WhatsApp</a>
+                        <a href="https://wa.me/526142688407" target="_blank" title="">WhatsApp</a>
                     </li>
                     <li>
                         <a href="https://github.com/ItzelCarrera" target="_blank" title="">GitHub</a>
