Corrijo rutas de favicons

--- a/Portafolio-main/src/index.html
+++ b/Portafolio-main/src/index.html
@@ -26,10 +26,10 @@
 
     <!-- favicons
     ================================================== -->
-  <link rel="apple-touch-icon" sizes="180x180" href="src/Icono.png">
-<link rel="icon" type="image/png" sizes="32x32" href="src/Icono.png">
-<link rel="icon" type="image/png" sizes="16x16" href="src/Icono.png">
-<link rel="manifest" href="src/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="/Portafolio-main/src/Icono.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/Portafolio-main/src/Icono1.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/Portafolio-main/src/Icono.png">
+<link rel="manifest" href="/Portafolio-main/src/site.webmanifest">
 
 <body id="top">
 
